--- a/Job Portal/JobHunt- Employement Website/about.html
+++ b/Job Portal/JobHunt- Employement Website/about.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>About Us - JobHunt</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -165,4 +166,5 @@
 </footer>
 
 </body>
+
 </html>
