--- a/Job Portal/JobHunt- Employement Website/companies.html
+++ b/Job Portal/JobHunt- Employement Website/companies.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Companies - JobHunt</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -132,4 +133,5 @@
 </footer>
 
 </body>
+
 </html>
