--- a/Job Portal/JobHunt- Employement Website/contact.html
+++ b/Job Portal/JobHunt- Employement Website/contact.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Contact Us - JobHunt</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -122,4 +123,5 @@
 </footer>
 
 </body>
+
 </html>
