--- a/Job Portal/JobHunt- Employement Website/index.html
+++ b/Job Portal/JobHunt- Employement Website/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>JobHunt - Find Your Dream Job</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -248,3 +249,4 @@
 
 </body>
 </html>
+
