--- a/Job Portal/JobHunt- Employement Website/jobs.html
+++ b/Job Portal/JobHunt- Employement Website/jobs.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Jobs - JobHunt</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -59,3 +60,4 @@
 
 </body>
 </html>
+
