--- a/Job Portal/JobHunt- Employement Website/login.html
+++ b/Job Portal/JobHunt- Employement Website/login.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Login - JobHunt</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -42,3 +43,4 @@
 
 </body>
 </html>
+
