--- a/Job Portal/JobHunt- Employement Website/postjob.html
+++ b/Job Portal/JobHunt- Employement Website/postjob.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Post a Job - JobHunt</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -142,4 +143,5 @@ Contact Phone Number:<br>
 </footer></center>
 
 </body>
+
 </html>
