--- a/Job Portal/JobHunt- Employement Website/profile.html
+++ b/Job Portal/JobHunt- Employement Website/profile.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Profile - JobHunt</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -130,3 +131,4 @@
 
 </body>
 </html>
+
