--- a/Job Portal/JobHunt- Employement Website/register.html
+++ b/Job Portal/JobHunt- Employement Website/register.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Register - JobHunt</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -79,3 +80,4 @@ Upload Resume:<br>
 
 </body>
 </html>
+
